--- a/blog-post.html
+++ b/blog-post.html
@@ -13,10 +13,10 @@
     <h1>Chris Moncada</h1>
   </div>
   <div class="parent">
-    <div class="header">
+    <header class="header">
       <ul id="nav">
         <li>
-          <a href="chrisMoncada-blog.html">home</a>
+          <a href="index.html">home</a>
         </li>
         <li>
           <a href="blog-post.html">read</a>
@@ -25,15 +25,22 @@
           <a href="#">about</a>
         </li>
       </ul>
-    </div>
-    <div class="content">
-      <h3>Blog Post</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam aliquam sem et tortor. Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque sit. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Quis auctor elit sed vulputate mi. Arcu dictum varius duis at. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Scelerisque mauris pellentesque pulvinar pellentesque. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula. Sed turpis tincidunt id aliquet risus. Imperdiet proin fermentum leo vel orci porta non. Adipiscing commodo elit at imperdiet dui accumsan sit amet nulla. Maecenas accumsan lacus vel facilisis volutpat est velit egestas dui. Vivamus arcu felis bibendum ut tristique et egestas. Nibh praesent tristique magna sit. Quisque id diam vel quam elementum pulvinar etiam non. Facilisis volutpat est velit egestas dui id ornare arcu. Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque.</p>
-    </div>
+    </header>
+    <article class="content">
+      <h3><b>Blog Post</b></h3>
+      <p><b>Author:</b> DV <img src="https://www.uidownload.com/files/642/883/807/darth-vader-darth-vader-lord-sith-lord-sith-sith-star-wars-strar-wars-icon.png" alt="DV" height="25" width="25px"/></p>
+      <p><b>Title:</b> I Shouldve Had The High Ground</p>
+      <p><b>Company:</b> Future Fortune 500</p>
+      <p><b>Bio:</b> Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Quis auctor elit sed vulputate mi.</p>
+      <p><q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam aliquam sem et tortor. Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque sit. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Quis auctor elit sed vulputate mi.</q></p>
+    </article>
     <div class="image"></div>
-    <div class="footer">
-      <p>Chris Moncada Front End Nanodegree &copy;</p>
-    </div>
+    <footer class="footer">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <p>Chris Moncada Front End Nanodegree &copy;</p>
+      </footer>
   </div>
 </body>
 </html>
