--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Personal Web Blog</title>
   <meta content="This is my personal web page blog" name="personal web blog project">
-  <link href="chrismoncada-blog.css" rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Spartan&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
     <h1>Chris Moncada</h1>
   </div>
   <div class="parent">
-    <div class="header">
+    <header class="header">
       <ul id="nav">
         <li>
           <a href="chrisMoncada-blog.html">home</a>
@@ -25,19 +25,22 @@
           <a href="#">about</a>
         </li>
       </ul>
-    </div>
-    <div class="new">
+    </header>
+    <section class="new">
       <a href="blog-post.html">new</a>
-    </div>
-    <div class="old">
+    </section>
+    <section class="old">
       <a href="#">old</a>
-    </div>
-    <div class="older">
+    </section>
+    <section class="older">
       <a href="#">older</a>
-    </div>
-    <div class="footer">
-      Chris Moncada Front End Nanodegree &copy;
-    </div>
+    </section>
+    <footer class="footer">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-instagram"></a>
+      <p>Chris Moncada Front End Nanodegree &copy;</p>
+    </footer>
   </div>
 </body>
 </html>
