--- a/blog-post.html
+++ b/blog-post.html
@@ -26,21 +26,25 @@
         </li>
       </ul>
     </header>
+    <div class="card">
+      <img alt="John" src="https://cdn3.iconfinder.com/data/icons/star-wars-color/216/obiwan-kenobi-512.png" style="width:100%">
+      <p class="title">Ben</p>
+      <p>Former Jedi</p>
+      <p><button>Send Hope</button></p>
+    </div>
     <article class="content">
-      <h3><b>Blog Post</b></h3>
-      <p><b>Author:</b> DV <img src="https://www.uidownload.com/files/642/883/807/darth-vader-darth-vader-lord-sith-lord-sith-sith-star-wars-strar-wars-icon.png" alt="DV" height="25" width="25px"/></p>
-      <p><b>Title:</b> I Shouldve Had The High Ground</p>
-      <p><b>Company:</b> Future Fortune 500</p>
-      <p><b>Bio:</b> Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Quis auctor elit sed vulputate mi.</p>
-      <p><q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam aliquam sem et tortor. Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque sit. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Quis auctor elit sed vulputate mi.</q></p>
+      <blockquote>
+        <h3><b>Blog Post</b></h3><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam aliquam sem et tortor. Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque sit. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Quis auctor elit sed vulputate mi.</i>
+      </blockquote>
     </article>
-    <div class="image"></div>
+    <div class="image">
+      <img height="200px" src="https://www.seriouseats.com/recipes/images/2017/06/20170621-michelada-chelada-vicky-wasik-8-1500x1125.jpg" width="400px">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
     <footer class="footer">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <p>Chris Moncada Front End Nanodegree &copy;</p>
-      </footer>
+      <a class="fa fa-facebook" href="#"></a> <a class="fa fa-twitter" href="#"></a> <a class="fa fa-instagram" href="#"></a>
+      <p>Chris Moncada Front End Nanodegree &copy;</p>
+    </footer>
   </div>
 </body>
 </html>
