--- a/blog-post.html
+++ b/blog-post.html
@@ -37,10 +37,10 @@
         <h3><b>Blog Post</b></h3><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam aliquam sem et tortor. Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque sit. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Quis auctor elit sed vulputate mi.</i>
       </blockquote>
     </article>
-    <div class="image">
+    <figure>
       <img height="200px" src="https://www.seriouseats.com/recipes/images/2017/06/20170621-michelada-chelada-vicky-wasik-8-1500x1125.jpg" width="400px">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
+      <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+  </figure>
     <footer class="footer">
       <a class="fa fa-facebook" href="#"></a> <a class="fa fa-twitter" href="#"></a> <a class="fa fa-instagram" href="#"></a>
       <p>Chris Moncada Front End Nanodegree &copy;</p>
