--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <ul id="nav">
         <li>
-          <a href="chrisMoncada-blog.html">home</a>
+          <a href="index.html">home</a>
         </li>
         <li>
           <a href="blog-post.html">read</a>
